# compmake

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  Dockerfile  INSTALL.md  LICENSE.txt  MANIFEST.in  Makefile  README.html  README.md  README.rst  README.txt  TODO.txt  a.xml  advanced.html  advanced_more.html  building_docs.html  changelog.html  commandline.html  commands.html  config.html  config_list.html  create_list_of_registered_events.py  developer.html  developer_db.html  developer_packages.html  events.html  examples  extending.html  features.html  functions.py  genindex.html  graph.html  index.html  index2.html  index_gh.html  install.html  (+31 more)
.circleci/: compmake_tests.tests  config.yml
_sources/: config.txt  graph.txt  index.txt  main.txt  parallel.txt  tutorial.txt  tutorial_basic.txt  tutorial_console.txt  tutorial_embedding.txt  tutorial_parmake.txt
_sources/api/: compmake.config.txt  compmake.events.txt  compmake.jobs.syntax.txt  compmake.jobs.txt  compmake.plugins.backend_local.txt  compmake.plugins.backend_multyvac.txt  compmake.plugins.backend_pmake.txt  compmake.plugins.backend_sge.txt  compmake.plugins.backend_ssh_cluster.txt  compmake.plugins.execution_stats.txt  compmake.plugins.old_backend_multiprocessing.txt  compmake.plugins.txt  compmake.scripts.scripts_utils.txt  compmake.scripts.txt  compmake.stats.txt  compmake.storage.txt  compmake.txt  compmake.ui.txt  compmake.unittests.txt  compmake.utils.txt
_static/: default.css
_static/algos/: compmake_1.py  compmake_jobs_deps.py  compmake_jobs_dynamic.py  compmake_jobs_returning.py
_static/demos/: example.py  example_fail.py
_static/example1/: graph3  graph_after  graph_after_compact  graph_before  list_before.txt  mycomputations.py  original.py  using_compmake1.py  using_compmake1_make.txt  using_compmake1_make_snip.txt  using_compmake2.py  using_compmake2_list_before.txt  using_compmake3.py  using_compmake3_list_before.txt  using_compmake3_make_snip.txt
_static/out-compmake_jobs_deps/: cm-args-report.pickle  cm-cache-f-2.pickle  cm-cache-f-3.pickle  cm-cache-f.pickle  cm-cache-report.pickle  cm-cache-statistics.pickle  cm-job-f-2.pickle  cm-job-f-3.pickle  cm-job-f.pickle  cm-job-report.pickle  cm-job-statistics.pickle
_static/out-compmake_jobs_dynamic/: cm-args-f-2.pickle  cm-args-schedule.pickle  cm-cache-f-2.pickle  cm-cache-f-3.pickle  cm-cache-f.pickle  cm-cache-schedule.pickle  cm-job-f-2.pickle  cm-job-f-3.pickle  cm-job-f.pickle  cm-job-schedule.pickle  cm-res-f.pickle
_static/out-compmake_jobs_returning/: cm-args-report.pickle  cm-args-schedule.pickle  (+12 more)
api/: compmake.config.html  compmake.events.html  compmake.html  compmake.jobs.html  compmake.jobs.syntax.html  compmake.plugins.backend_local.html  compmake.plugins.backend_multyvac.html  compmake.plugins.backend_pmake.html  compmake.plugins.backend_sge.html  compmake.plugins.backend_ssh_cluster.html  compmake.plugins.execution_stats.html  compmake.plugins.html  compmake.plugins.old_backend_multiprocessing.html  compmake.scripts.html  compmake.scripts.scripts_utils.html  compmake.stats.html  compmake.storage.html  compmake.ui.html  compmake.unittests.html  compmake.utils.html  modules.html
compmake/: __init__.py  constants.py  process.py  process_storage.py  state.py  stats.py  stats_pipe.py  storage.py  storage_filesystem.py  storage_old.py.old  storage_redis.py  storage_test.py  structures.py  ui.py  ui_commands.py  ui_commands_helpers.py  visualization.py
docs/: .gitignore  advanced.rst  advanced_more.rst  changelog.rst  commands.rst  commands_list.html  conf.py  config_list.html  create_website.sh  definitions.txt  developer.rst  developer_db.rst  developer_packages.rst  docs.mk  download.html  epydoc.cfg  extending.rst  features.rst  fork.html  graph.rst  index.rst  init_website.sh  install.rst  sphinxtogithub.py.old  tutorial.key  tutorial.rst  tutorial_cluster.rst  tutorial_makeclean.rst  tutorial_more.rst  tutorial_naming.rst  tutorial_parmake.rst  tutorial_suspend.rst  tutorial_yield.rst  twitter_badge.html
examples/: example_big.py  example_dynamic.py  example_dynamic_explicitcontext.py  example_external.py  example_failure.py  example_malformed.py  example_progress.py  example_progress_same.py  example_simple.py  example_test_pickle.py  example_test_pickle_step2.py  prime_stats.py
sources/: advanced.txt  building_docs.txt  changelog.txt  commandline.txt  config.txt  developer.txt  events.txt  extending.txt  graph.txt  index.txt  install.txt  limitations.txt  related.txt  tutorial.txt  tutorial_basic.txt  tutorial_console.txt  tutorial_makeclean.txt  tutorial_parmake.txt  tutorial_yield.txt  why.txt
(+1769 files in other folders)
